<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".fragment.DiscoverFragment">

        <com.example.messageapp.custom.CustomHeaderView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_view="discover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/margin_10"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_zalo_video" />

            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_noto_sans"
                    android:text="@string/zalo_video"
                    android:textColor="@color/text_common"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/font_noto_sans"
                    android:text="@string/note_zalo_video"
                    android:textColor="@color/text_grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imgAd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="50dp"
            android:background="@color/grey_light" />

        <com.example.messageapp.custom.ItemViewProfile
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:color_icon="@color/green_light"
            app:icon="@drawable/ic_game"
            app:show_according="true"
            app:title="@string/game_center" />

        <com.example.messageapp.custom.DividerCommon
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.messageapp.custom.ItemViewProfile
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:color_icon="@color/orange_dark"
            app:detail="@string/detail_life_utilities"
            app:icon="@drawable/ic_calendar"
            app:show_according="true"
            app:show_divider="true"
            app:title="@string/life_utilities" />

        <com.example.messageapp.custom.ItemViewProfile
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:color_icon="@color/red_light"
            app:icon="@drawable/ic_application"
            app:show_according="false"
            app:show_divider="true"
            app:title="@string/financial_utilities" />

        <com.example.messageapp.custom.ItemViewProfile
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:color_icon="@color/blue_3"
            app:icon="@drawable/ic_public_service"
            app:show_according="false"
            app:title="@string/public_services" />

        <com.example.messageapp.custom.DividerCommon
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.messageapp.custom.ItemViewProfile
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:color_icon="@color/blue_4"
            app:icon="@drawable/ic_stack"
            app:show_according="true"
            app:title="@string/mini_app" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey_bg" />
    </LinearLayout>
</layout>